Remove .idea from version control and add to .gitignore
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>